Staging/Platform_V2/platform_v2/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-v2-svc
  # namespace: terrestrial-platform
spec:
  selector:
    app: platform-v2-app
  ports:
    - protocol: "TCP"
      port: 8022
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-v2-app
spec:
  selector:
    matchLabels:
      app: platform-v2-app
  replicas: 1
  template:
    metadata:
      labels:
        app: platform-v2-app
    spec:
      containers:
        - name: platform-v2-app
          image: savantripathi22/platform_v2:july10
          imagePullPolicy: Always
          ports:
            - containerPort: 8022
